--- a/src/App.scss
+++ b/src/App.scss
@@ -1,13 +1,12 @@
 .App {
   text-align: center;
-  background-color: #282c34;
   min-height: 100vh;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  flex-direction: column;;
   font-size: calc(10px + 2vmin);
-  color: white;
+  padding: 30px;
+  margin-top: 0;
+  width: auto;
 }
 
 .App-logo {
@@ -20,8 +19,6 @@
     animation: App-logo-spin infinite 20s linear;
   }
 }
-
-
 
 
 @keyframes App-logo-spin {
